Fix crash when hiding the TextPreview widget

The problem was that the passed parent to the text preview
widget was the KateView, which is incorrect. The correct
parent is 'this', i.e. once the KateIconBorder, and once
the KateScrollBar.

BUG: 397266
FIXED-IN: 5.50
Reviewed-By: d_ed