src/view/katetextpreview.cpp
@@ -30,8 +30,8 @@
 
 #include <cmath>
 
-KateTextPreview::KateTextPreview(KTextEditor::ViewPrivate *view)
-    : QFrame(view, Qt::ToolTip | Qt::FramelessWindowHint | Qt::BypassWindowManagerHint)
+KateTextPreview::KateTextPreview(KTextEditor::ViewPrivate *view, QWidget * parent)
+    : QFrame(parent, Qt::ToolTip | Qt::FramelessWindowHint | Qt::BypassWindowManagerHint)
     , m_view(view)
     , m_line(0)
     , m_showFoldedLines(false)
